package logarlec.view.observerviews;
import javax.swing.JPanel;

public abstract class View extends JPanel {
    public abstract void updateView();
}
