package logarlec.view.panels;

import logarlec.view.observerviews.View;
import logarlec.model.actor.Actor;

public class ActorPanel extends View {
    private Actor actor;

    public ActorPanel(Actor actor) {
        this.actor = actor;
    }

    public void updateView() {
        // TODO
    }
}
